Fixed waves overflow

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -15,6 +15,7 @@
 
 .card img {
     width: calc((100vh - 425px) * 1.333333);
+    max-width: 640px;
     height: auto;
     box-sizing: border-box;
     border-radius: 5px 5px 0 0;
