--- a/src/Components/Waves/Waves.css
+++ b/src/Components/Waves/Waves.css
@@ -1,20 +1,22 @@
 .waves {
     min-height: 75px;
+    width: 100%;
     z-index: -9;
+    overflow: hidden;
 }
 
 .wave {
     z-index: -9;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
+    min-height: 75px;
     width: 200%;
-    height: 100%;
     background-position: 0 bottom;
     background-repeat: repeat-x;
     transform-origin: center bottom;
+}
+
+.wave:nth-of-type(2) {
+    margin-top: -75px;
 }
 
 @keyframes wave {
