--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
 
-body {
+html, body, #root, .App, .container-fluid {
+    min-height: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
+}
+
+.container-fluid {
+    display: flex;
+    flex-direction: column;
+}
+
+.row {
+    flex: 1 1 auto;
+}
+
+body {
     font-family: 'Roboto', sans-serif;
     background: #111111;
     overflow-x: hidden;
